# parking_fast

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/: Dockerfile  db.sqlite3  docker-compose.yml  requirements.txt
src/core/: .env  permissions.py  settings.py  urls.py
src/customers/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/customers/migrations/: 0001_initial.py
src/parking/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
src/parking/migrations/: 0001_initial.py  0002_alter_parkingrecord_parking_spot.py
src/vehicles/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/vehicles/migrations/: 0001_initial.py
