[project]
name = "sistema-estacionamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-jazzmin>=3.0.1",
    "django-rql>=4.4.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-seed>=0.3.1",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "ruff>=0.11.7",
]
